Update 02.html to change Mermaid theme to 'forest' and increase timeline font size for better readability

--- a/02.html
+++ b/02.html
@@ -308,13 +308,13 @@
 			document.addEventListener("DOMContentLoaded", function () {
 				mermaid.initialize({
 					startOnLoad: true,
-					theme: "neutral", // Consider 'base' or 'default' for better contrast if needed
+					theme: "forest", // Changed theme to forest for a modern look
 					timeline: {
 						// Mermaid timeline specific config if needed
 					},
 					themeVariables: {
 						// Customize colors if default theme isn't ideal
-						fontSize: "16px", // Increase font size for timeline text
+						fontSize: "24px", // Increased font size for timeline text
 					},
 				});
 				// Optional: Force redraw if layout shifts affect Mermaid
