Refactor code structure for improved readability and maintainability

--- a/02.html
+++ b/02.html
@@ -139,15 +139,15 @@
 						<pre class="mermaid">
               timeline
                 title Vietnamese History
-                939 : Independence from China
-                1010 : Ly Dynasty begins
-                1400s : Golden Age of Vietnamese culture
-                1858 : French colonization begins
-                1945 : Declaration of Independence
-                1954 : End of French rule
-                1975 : Reunification
-                1986 : Economic reforms (Doi Moi)
-                2000s : Rapid modernization
+								c. 2879 BCE - 938 CE: Ancient Era, including legendary periods, Dong Son culture, over 1000 years of Chinese rule, and resistance movements like the Trung Sisters.
+								939: Independence from China established following the Battle of Bach Dang (938 CE).
+								1010: Ly Dynasty begins, initiating a long period of independent rule.
+								13th - 15th Centuries: Tran & Later Le Dynasties; Tran Dynasty successfully repelled Mongol invasions three times (13th C); cultural Golden Age often associated with the 1400s (Later Le).
+								1858: French colonization begins, marking the start of French conquest during the Nguyen Dynasty.
+								1945: Declaration of Independence (Democratic Republic of Vietnam proclaimed).
+								1954: End of French rule following the First Indochina War; Geneva Accords lead to the division of Vietnam.
+								1975: Reunification of North and South Vietnam following the end of the Vietnam War.
+								1986 onwards: Economic reforms (Doi Moi) initiated, leading into a period of rapid modernization beginning in the 2000s.
             </pre>
 					</div>
 				</section>
