Add external culture info link to 02.html and update insider tips format in 07.html

--- a/02.html
+++ b/02.html
@@ -296,6 +296,17 @@
 						</div>
 					</div>
 				</section>
+				<!-- Link to external culture info -->
+				<p class="mt-6 text-center text-gray-600">
+					For more in-depth information on Vietnamese culture, check out this
+					<a
+						href="https://www.slideshare.net/slideshow/viet-nam-culture-intercultural-communication/34868841?from_search=4"
+						target="_blank"
+						rel="noopener noreferrer"
+						class="text-blue-600 hover:underline"
+						>presentation on SlideShare</a
+					>.
+				</p>
 			</div>
 
 			<!-- Footer Bar -->
