--- a/07.html
+++ b/07.html
@@ -415,49 +415,71 @@
 								</div>
 							</div>
 						</div>
+					</div>
+				</div>
+				<!-- End of flex container for columns -->
 
-						<!-- Additional Information -->
-						<div class="mt-4 bg-gray-100 rounded-lg p-3">
-							<h4 class="text-md font-semibold mb-2">Insider Tips:</h4>
-							<ul class="text-sm space-y-1 text-gray-700">
-								<li class="flex items-start">
-									<i class="fas fa-check-circle text-green-600 mt-0.5 mr-2"></i>
-									<span
-										>Spend the night in a homestay in Tam Coc or Trang An for
-										authentic local experiences</span
-									>
-								</li>
-								<li class="flex items-start">
-									<i class="fas fa-check-circle text-green-600 mt-0.5 mr-2"></i>
-									<span
-										>Combine your visit with Cuc Phuong National Park, just 45km
-										from Ninh Binh</span
-									>
-								</li>
-								<li class="flex items-start">
-									<i class="fas fa-check-circle text-green-600 mt-0.5 mr-2"></i>
-									<span
-										>Try local specialties: goat meat (thịt dê) and cơm cháy
-										(crispy rice) dishes</span
-									>
-								</li>
-								<li class="flex items-start">
-									<i class="fas fa-check-circle text-green-600 mt-0.5 mr-2"></i>
-									<span
-										>Easy day trip from Hanoi (2 hours by train/bus) or stay
-										overnight for fuller experience</span
-									>
-								</li>
-							</ul>
+				<!-- Additional Information (Updated Format) -->
+				<div class="bg-blue-50 rounded-lg p-3 flex items-start">
+					<div class="text-blue-700 text-3xl mr-4 pt-1">
+						<i class="fas fa-lightbulb"></i>
+					</div>
+					<div>
+						<h3 class="font-semibold text-blue-800 mb-2">
+							Insider Tips for Ninh Binh:
+						</h3>
+						<div class="grid grid-cols-2 gap-3">
+							<div class="tip-card border-l-blue-500 bg-blue-50">
+								<strong class="text-blue-700">Authentic Stay:</strong>
+								<p class="text-blue-600 text-xs mt-1">
+									Spend the night in a homestay in Tam Coc or Trang An for
+									genuine local experiences and peaceful surroundings.
+								</p>
+							</div>
+
+							<div class="tip-card border-l-purple-500 bg-purple-50">
+								<strong class="text-purple-700">Extend Your Trip:</strong>
+								<p class="text-purple-600 text-xs mt-1">
+									Combine your visit with Cuc Phuong National Park, Vietnam's
+									oldest national park, just 45km away for nature lovers.
+								</p>
+							</div>
+
+							<div class="tip-card border-l-amber-500 bg-amber-50">
+								<strong class="text-amber-700">Local Flavors:</strong>
+								<p class="text-amber-600 text-xs mt-1">
+									Don't miss trying local specialties: goat meat (thịt dê) and
+									cơm cháy (crispy burnt rice) dishes.
+								</p>
+							</div>
+
+							<div class="tip-card border-l-teal-500 bg-teal-50">
+								<strong class="text-teal-700">Getting Here:</strong>
+								<p class="text-teal-600 text-xs mt-1">
+									Ninh Binh is an easy day trip from Hanoi (2 hours by
+									train/bus), but staying overnight allows for a fuller, less
+									rushed experience.
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+			<!-- End of p-8 container -->
 
 			<div class="bg-gray-800 text-white p-2 text-sm flex justify-between mt-4">
 				<span>Vietnam Travel Presentation</span>
 				<span>Slide 7: Exploring Ninh Binh</span>
 			</div>
 		</div>
+		<style>
+			/* Add this style block or integrate into existing one */
+			.tip-card {
+				border-radius: 6px;
+				padding: 8px 12px;
+				border-left-width: 4px;
+				font-size: 13px;
+			}
+		</style>
 	</body>
 </html>
