--- a/09.html
+++ b/09.html
@@ -338,7 +338,8 @@
 					</div>
 
 					<!-- Regional Cuisine Map -->
-					<div class="region-card p-3 flex flex-col justify-between">
+					<div class="region-card p-3 flex flex-col">
+						<!-- Removed justify-between -->
 						<h3 class="text-base font-bold mb-2 text-gray-800">
 							Regional Variations
 						</h3>
