Refactor code structure for improved readability and maintainability

--- a/02.html
+++ b/02.html
@@ -248,10 +248,9 @@
 						Festivals
 					</h2>
 					<div class="grid md:grid-cols-3 gap-6">
-						<!-- Left Element: Tết -->
-						<div class="festival-card">
+						<!-- Left Element: Tết -->						<div class="festival-card">
 							<img
-								src="https://vietnam.travel/sites/default/files/inline-images/Tet%20holiday%20Vietnam.jpg"
+								src="./img/tet-festival.jpg"
 								alt="Tet Festival"
 								class="festival-image w-full"
 							/>
@@ -281,10 +280,9 @@
 							</div>
 						</div>
 
-						<!-- Right Element: Traditional Performance -->
-						<div class="performance-image-container">
+						<!-- Right Element: Traditional Performance -->						<div class="performance-image-container">
 							<img
-								src="https://www.travelvietnam.com/images/photos/vietnam/fan-dance-vietnam.jpg"
+								src="./img/traditional-fan-dance.jpg"
 								alt="Traditional Fan Dance"
 								class="performance-image"
 							/>
