--- a/06.html
+++ b/06.html
@@ -139,9 +139,8 @@
 				<div class="grid grid-cols-2 gap-6">
 					<!-- Son Doong Cave -->
 					<div class="wonder-card">
-						<div class="image-wrapper">
-							<img
-								src="https://www.travelvietnam.com/images/Blog/Son-Doong-Cave-Vietnam.jpg"
+						<div class="image-wrapper">						<img
+								src="./img/son-doong-cave-vietnam.jpg"
 								alt="Son Doong Cave"
 								class="wonder-image"
 							/>
@@ -190,9 +189,8 @@
 
 					<!-- Ban Gioc Waterfall -->
 					<div class="wonder-card">
-						<div class="image-wrapper">
-							<img
-								src="https://kampatour.com/pic/blog/d625796d-bc3e-4fb7-b5ee-1c96178ca9e1.jpg"
+						<div class="image-wrapper">						<img
+								src="./img/ban-gioc-waterfall.jpg"
 								alt="Ban Gioc Waterfall"
 								class="wonder-image"
 							/>
@@ -240,9 +238,8 @@
 
 					<!-- Mekong Delta -->
 					<div class="wonder-card">
-						<div class="image-wrapper">
-							<img
-								src="https://static.vinwonders.com/production/Floating-market-in-Mekong-Delta-5.jpg"
+						<div class="image-wrapper">						<img
+								src="./img/floating-market-mekong.jpg"
 								alt="Mekong Delta"
 								class="wonder-image"
 							/>
@@ -291,9 +288,8 @@
 
 					<!-- Van Long Nature Reserve -->
 					<div class="wonder-card">
-						<div class="image-wrapper">
-							<img
-								src="https://vietnam.travel/sites/default/files/inline-images/shutterstock_334886432.jpg"
+						<div class="image-wrapper">						<img
+								src="./img/van-long-nature-reserve.jpg"
 								alt="Van Long Nature Reserve"
 								class="wonder-image"
 							/>
