--- a/08.html
+++ b/08.html
@@ -146,9 +146,8 @@
 				<div class="grid grid-cols-3 gap-5">
 					<!-- Fansipan -->
 					<div class="hiking-card">
-						<div class="image-wrapper">
-							<img
-								src="https://static.vinwonders.com/production/fansipan-mountain-2.jpg"
+						<div class="image-wrapper">						<img
+								src="./img/fansipan-mountain.jpg"
 								alt="Fansipan Mountain"
 								class="hiking-image"
 							/>
@@ -182,9 +181,8 @@
 
 					<!-- Bach Moc Luong Tu -->
 					<div class="hiking-card">
-						<div class="image-wrapper">
-							<img
-								src="https://www.asiakingtravel.com/cuploads/files/Bach_Moc_Luong_Tu_Lao_Cai.jpg"
+						<div class="image-wrapper">						<img
+								src="./img/bach-moc-luong-tu.jpg"
 								alt="Bach Moc Luong Tu"
 								class="hiking-image"
 							/>
@@ -218,9 +216,8 @@
 
 					<!-- Ta Xua -->
 					<div class="hiking-card">
-						<div class="image-wrapper">
-							<img
-								src="https://maichau.ecolodge.asia/ckfinder/userfiles/images/mai-chau-ecolodge-ta-xua.jpg"
+						<div class="image-wrapper">						<img
+								src="./img/ta-xua.jpg"
 								alt="Ta Xua"
 								class="hiking-image"
 							/>
@@ -254,9 +251,8 @@
 
 					<!-- Mai Chau Valley -->
 					<div class="hiking-card">
-						<div class="image-wrapper">
-							<img
-								src="https://www.tripsavvy.com/thmb/EVVniUMBPtwWylov-y1vQz_wLF8=/2000x1499/filters:fill(auto,1)/GettyImages-909461330-5bd2f76ec9e77c0058cb5536.jpg"
+						<div class="image-wrapper">						<img
+								src="./img/mai-chau-valley.jpg"
 								alt="Mai Chau Valley"
 								class="hiking-image"
 							/>
@@ -292,9 +288,8 @@
 
 					<!-- Mu Cang Chai -->
 					<div class="hiking-card">
-						<div class="image-wrapper">
-							<img
-								src="https://statics.vinpearl.com/mu-cang-chai-vietnam-1_1690179154.jpg"
+						<div class="image-wrapper">						<img
+								src="./img/mu-cang-chai.jpg"
 								alt="Mu Cang Chai"
 								class="hiking-image"
 							/>
