--- a/11.html
+++ b/11.html
@@ -225,13 +225,12 @@
         <div class="cost-card bg-blue-50 p-3 relative">
           <div class="savings-badge">67% <br>Less</div>
           <h4 class="font-semibold mb-2">Budget Traveler</h4>
-          <div class="flex items-center mb-3">
-            <div class="w-1/2 flex items-center">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Flag_of_Vietnam.svg/200px-Flag_of_Vietnam.svg.png" alt="Vietnam Flag" class="country-flag">
+          <div class="flex items-center mb-3">          <div class="w-1/2 flex items-center">
+              <img src="./img/vietnam-flag-200px.png" alt="Vietnam Flag" class="country-flag">
               <span class="text-lg font-bold">$25-35</span>
             </div>
             <div class="w-1/2 flex items-center">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/8/88/Flag_of_Australia_%28converted%29.svg" alt="Australia Flag" class="country-flag">
+              <img src="./img/australia-flag.svg" alt="Australia Flag" class="country-flag">
               <span class="text-lg font-bold">$75-100</span>
             </div>
           </div>
@@ -245,11 +244,11 @@
           <h4 class="font-semibold mb-2">Mid-Range Traveler</h4>
           <div class="flex items-center mb-3">
             <div class="w-1/2 flex items-center">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Flag_of_Vietnam.svg/200px-Flag_of_Vietnam.svg.png" alt="Vietnam Flag" class="country-flag">
+              <img src="./img/vietnam-flag-200px.png" alt="Vietnam Flag" class="country-flag">
               <span class="text-lg font-bold">$50-80</span>
             </div>
             <div class="w-1/2 flex items-center">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/8/88/Flag_of_Australia_%28converted%29.svg" alt="Australia Flag" class="country-flag">
+              <img src="./img/australia-flag.svg" alt="Australia Flag" class="country-flag">
               <span class="text-lg font-bold">$150-250</span>
             </div>
           </div>
@@ -263,11 +262,11 @@
           <h4 class="font-semibold mb-2">Luxury Traveler</h4>
           <div class="flex items-center mb-3">
             <div class="w-1/2 flex items-center">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Flag_of_Vietnam.svg/200px-Flag_of_Vietnam.svg.png" alt="Vietnam Flag" class="country-flag">
+              <img src="./img/vietnam-flag-200px.png" alt="Vietnam Flag" class="country-flag">
               <span class="text-lg font-bold">$150+</span>
             </div>
             <div class="w-1/2 flex items-center">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/8/88/Flag_of_Australia_%28converted%29.svg" alt="Australia Flag" class="country-flag">
+              <img src="./img/australia-flag.svg" alt="Australia Flag" class="country-flag">
               <span class="text-lg font-bold">$350+</span>
             </div>
           </div>
